# merchant_demo

./: .env.example  pyproject.toml
app/: check_connectivity.py  config.py  facilitator_client.py  main.py  merchant_approval.py  x402_handler.py
app/templates/: base.html  gallery.html  index.html  paywall.html
app/templates/static/css/: style.css
app/templates/static/js/: app.js
